--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
 }
 
 dependencies {
+    //material.io -> Develop -> Android -> Getting Started
+    //https://material.io/develop/android/docs/getting-started
+    implementation 'com.google.android.material:material:1.2.1'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
